1.24 2005-12-18
- fixed a bug login block is always displayed by enabling sitemap block (thx okamoto)
- updated language files
-- french (thx marco)
-- portuguesebr (thx yuji)

1.23 2005-12-2
- fixed fatal errors in xml_google.php with some conditions (thx centurier)
- modified the module icon (thx Argon)
- modified language files
-- rename poski to polish (requested by Tomasz in Xoops.pl Support Team)
- fixed plugins
-- myAds
-- sections

1.22 2005-11-14
- updated myblocksadmin and mymenu
- remove CRs in some php files
- added a language file
-- polish (thx kurak_bu)
- updated language files
-- tchinese (thx Sheng-Hung, Huang)
-- french (thx marco)


1.21 2005-09-04
- fixed configs are not reflected to the block (thx shige3)
- modified to use $sitemap_configs instead of $xoopsModuleConfig directly
- fixed some language constants (added language/blocks.php)


1.20 2005-09-03
- added sitemap_block
- modified main template


1.13 2005-07-19
- modified alltime-guest-mode (thx dasdan)


1.12 2005-06-20
- modified xml_google.php as root controller (copy it to XOOPS_ROOT_PATH/)
- added a plugin
-- pbboard (thx karedokx)


1.11 2005-06-15

- modified xml_google.php for Google sitemaps
- modified sitemap_index.html (thx flying.tux)
- update langage files
-- french (thx marco)


1.10 2005-06-12

- added xml_google.php for Google sitemaps


1.00 2005-04-14

- modified the structure of the directory for plugins