@@ -5,6 +5,7 @@ articles: PsyDoc
 bluesbb: StingBlue
 booklists:noisia
 catads: HMN
+extcal: bonnaudet eric
 myAds:Tom_G3X
 myalbum-P: suin, GIJOE
 mybbs: suin
